# EffekseerForWeb

./: .gitignore  .gitmodules  LICENSE  README.md  build.py  package-lock.json  package.json  tsconfig.json
.github/workflows/: distribution.yml
PackageData/: README.md  README_en.md  README_ja.md  manifest.json
PackageData/Sample/: basic-threejs-webgpu.html  basic-threejs-webgpu.js  basic-webgpu.html  basic-webgpu.js  index.html  style.css  webgl.html  webgl.js  webgpu.html  webgpu.js
docs/: Design_en.md  Design_ja.md  Distribution.md
scripts/: create_distribution_package.py
src/cpp/: CMakeLists.txt  CustomFile.h  RuntimeBindings.cpp  RuntimeContext.h  main.cpp
src/js/: post.js  pre_webgpu.js
src/ts/: index.ts
tests/: runtime_api.test.mjs  sample_package.test.mjs
tests/browser/: capture_testdata_screenshots.mjs  run_smoke.mjs  smoke.html  smoke.js
